--- a/ucolorpicker.css
+++ b/ucolorpicker.css
@@ -14,6 +14,11 @@
     visibility: hidden;
     width: 136px;
     z-index: 4011;
+
+    /* uncomment if you want it right-aligned. But better use ".dropdown-menu-XX-right" class from Bootstrap4.
+      right: 0;
+      left: auto;
+    */
 }
 
 .color-picker:hover .color-palette {
@@ -50,4 +55,39 @@
     background-repeat: no-repeat;
     -webkit-background-size: 16px 16px;
     background-size: 16px 16px
+}
+
+
+/* Class to restore default alignment in certain dimensions */
+.dropdown-menu-auto {
+    left: auto !important; /* override! only !important works. */
+    right: auto !important;
+}
+
+@media (min-width: 576px) {
+    .dropdown-menu-sm-auto {
+        left: auto !important;
+        right: auto !important;
+    }
+}
+
+@media (min-width: 768px) {
+    .dropdown-menu-md-auto {
+        left: auto !important;
+        right: auto !important;
+    }
+}
+
+@media (min-width: 992px) {
+    .dropdown-menu-lg-auto {
+        left: auto !important;
+        right: auto !important;
+    }
+}
+
+@media (min-width: 1200px) {
+    .dropdown-menu-xl-auto {
+        left: auto !important;
+        right: auto !important;
+    }
 }
